# tokimo-package-bookfinder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
final_test/: 132.epub
src/: lib.rs  main.rs  types.rs
src/providers/: annas_archive.rs  archive.rs  gutenberg.rs  libgen.rs  mod.rs
