[package]
name = "bookfinder"
version = "0.1.0"
edition = "2021"
description = "Multi-source book search and download library (LibGen, Project Gutenberg, Internet Archive)"
license = "MIT"
repository = "https://github.com/tokimo-lab/tokimo-package-bookfinder"
homepage = "https://github.com/tokimo-lab/tokimo-package-bookfinder"
keywords = ["books", "library", "libgen", "download", "search"]
categories = ["text-processing"]

[lib]
name = "bookfinder"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "stream"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
regex = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
